# fa20-lab-starter-just-practice-

./: CMakeLists.txt
fa20-proj1-starter-master/: gameoflife.c  imageloader.c  steganography.c
fa20-proj2-starter-master/src/: abs.s  argmax.s  classify.s  dot.s  matmul.s  read_matrix.s  relu.s  write_matrix.s
fa20-proj2-starter-master/unittests/: unittests.py
fa20-proj3-starter-master/cpu/: alu.circ  branch_comp.circ  control_logic.circ  cpu.circ  imm_gen.circ  regfile.circ
lab01/: CMakeLists.txt  ll_cycle.c
lab02/: Makefile  bit_ops.c  lfsr.c  vector.c
lab03/: CMakeLists.txt  cc_test.s  ex1.s  ex2.s  factorial.s  list_map.s
lab04/: megalistmanips.s
lab05/: ex1.circ  ex2.circ  ex3.circ  ex4.circ  ex5.circ
lab06/: ex1.circ
lab07/: exercise1.txt  exercise2.txt
